# CSI2372-Fall-2020

Labs/Lab 1/: Lab 1.sln
Labs/Lab 1/myfile1/: myfile1.cpp  myfile1.filters  myfile1.vcxproj
Labs/Lab 1/myfile2/: myfile2.cpp  myfile2.h  myfile2.vcxproj  myfile2.vcxproj.filters
Labs/Lab 1/x64/Debug/: myfile1.ilk  myfile2.ilk
Labs/Lab 2/: Exercise1.cpp
Labs/Lab 2/Exercise2/: myFile1.h  myfile1.cpp  myfile1principal.cpp
Labs/Lab 2/Exercise3/: Exercise3.sln
Labs/Lab 3/: Exercise 2.sln
Labs/Lab 3/Exercise 2/: Exercise 2.vcxproj  Exercise 2.vcxproj.filters  myFile.cpp  myLinkedList.h
Labs/Lab 4/Exercise 1/: CMakeLists.txt  myFile1.cpp  myFile1a.h  myFile1b.h
Labs/Lab 5/Exercise 2/: CMakeLists.txt  Card.h  CardsSet.h  Player.h  myFile.cpp
Project/: .gitignore  CMakeLists.txt  save.txt
Project/src/: Card.cpp  CardFactory.cpp  Chain.cpp  Deck.cpp  DiscardPile.cpp  Hand.cpp  Player.cpp  Table.cpp  TradeArea.cpp  UIUtils.cpp  Utils.cpp  main.cpp
Project/src/exceptions/: ArrayIndexOutOfBoundsException.cpp  EmptyContainerException.cpp  Exception.cpp  GameException.cpp  MaxedChainsException.cpp  MixedCardException.cpp  NotEnoughCoinsException.cpp  NullPointerException.cpp
Project/src/exceptions/include/: ArrayIndexOutOfBoundsException.h  EmptyContainerException.h  Exception.h  GameException.h  MaxedChainsException.h  MixedCardException.h  NotEnoughCoinsException.h  NullPointerException.h
Project/src/include/: Card.h  CardFactory.h  Chain.h  Deck.h  DiscardPile.h  Hand.h  Player.h  Table.h  TradeArea.h  UIUtils.h  Utils.h
(+29 files in other folders)
